# SDL2_Basic_Setup

./: .gitignore  CMakeLists.txt  README.md
CMAKE/: FindSDL2Mixer.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake
src/: main.c
